--- a/pages/index.html
+++ b/pages/index.html
@@ -34,10 +34,16 @@
       </div>
       <br/>
 
-      <div class="d-flex justify-content-center">
-        <button class="btn btn-outline-primary mx-2">Save</button>
-        <button class="btn btn-outline-primary mx-2">Cancel</button>
-        <button class="btn btn-outline-primary mx-2">Finish</button>
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <button class="btn btn-outline-primary mx-2">Save</button>
+        </div>
+        <div class="col-auto">
+          <button class="btn btn-outline-primary mx-2">Cancel</button>
+        </div>
+        <div class="col-auto">
+          <button class="btn btn-outline-primary mx-2">Finish</button>
+        </div>
       </div>
     </main>
     <script src="/jquery"></script>
